# uv-rootless

./: Dockerfile  Justfile  README.md  pyproject.toml
.github/workflows/: ci.yaml
deploy/: deployment.yaml  namespace.yaml
uv_rootless/: __init__.py
