[project]
name = "uv-rootless"
version = "0.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["typer>=0.15.1"]

[project.scripts]
uv-rootless = "uv_rootless:app"

[tool.uv]
package = true

[dependency-groups]
dev = ["ruff>=0.9.7"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
